# pbTerm-imgui

./: .gitignore  CMakeLists.txt  Info.plist.in  README.md
include/: App.h  CommandDock.h  ConnectionDialog.h  FolderTreeDock.h  ProfileManager.h  SettingsDialog.h  SshConnection.h  Terminal.h  TerminalDock.h  TmuxController.h
resources/icon/: pbTerm.icns
src/: App.cpp  CommandDock.cpp  ConnectionDialog.cpp  FolderTreeDock.cpp  ProfileManager.cpp  SettingsDialog.cpp  SshConnection.cpp  Terminal.cpp  TerminalDock.cpp  TmuxController.cpp  main.cpp
src/platform/: DragDropHelper.h  DragDropHelper_mac.mm
